<?xml version="1.0" encoding="utf-8"?>
<!-- Default language: English. Spanish lives in values-es/strings.xml. -->
<resources>
    <string name="app_name">Astro Knights Turn Order</string>

    <string name="boss_default">Boss</string>
    <string name="player_default">Player %1$d</string>

    <string name="subtitle_boss">Boss turn</string>
    <string name="subtitle_player">Knight\'s turn</string>
    <string name="subtitle_wild">Wild · token passes to %1$s</string>
    <string name="subtitle_pair_first">Choose which of you two goes now</string>
    <string name="subtitle_pair_second">Whoever hasn\'t played yet goes now</string>
    <string name="pair_title">%1$s / %2$s</string>

    <string name="history_title">Drawn so far: %1$s</string>
    <string name="remaining">Cards left in deck: %1$d</string>
    <string name="history_wild">%1$s (wild)</string>
    <string name="history_pair_second">%1$s (2nd)</string>
    <string name="reshuffled">Deck reshuffled</string>
    <string name="cd_undo">Undo</string>
    <string name="cd_settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="settings_players">Number of players (knights)</string>
    <string name="settings_players_hint">1 player: 3 player cards and 2 Boss cards. 3 players: includes the wild card; give the wild token to Player 1 and number players clockwise, since the token passes to the left. 4 players: 1/2 and 3/4 cards.</string>
    <string name="settings_names">Names</string>
    <string name="settings_boss">Boss</string>
    <string name="settings_reset">Reset deck</string>
    <string name="settings_reset_done">The deck will reset when you go back</string>
</resources>
